[package]
name = "unsh"
version = "0.1.0"
authors = ["Josh Kuhn <deontologician@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustyline = "8.1.0"
anyhow = "1.0.40"
shlex = "1.0.0"
nom = {version = "6.1.2", features = ["regexp"] }
